Changed method used for instantiation of object with no arguments